--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         </picture>
                     </div>
                     <div class="offer__btn-wrapper">
-                        <button class="offer__buy-btn offer__purchase-card">Стать партнером</button>
+                        <button class="offer__buy-btn offer__partner-card">Стать партнером</button>
                     </div>
                 </div>
             </div>
@@ -373,7 +373,7 @@
                         </div>
                         <div class="promo__controls">
                             <div class="promo__buy-btn">
-                                <button class="offer__buy-btn">Стать партнером</button>
+                                <button class="offer__buy-btn offer__partner-card">Стать партнером</button>
                             </div>
                             <div class="promo__play-btn">
                                 <div class="promo__play-btn-after"></div>
@@ -459,7 +459,7 @@
                 </div>
             </div>
         </div>
-        
+
         <svg class="svg-slider-left" fill="black">
             <rect fill="#fff" />
             <defs>
@@ -504,6 +504,30 @@
                 </div>
             </div>
         </nav>
+
+        <div class="modal">
+            <div class="modal__wrapper">
+                <div class="modal__title-wrapper">
+                    <div class="modal__title">ПРИОБРЕСТИ КАРТУ</div>
+                    <div class="modal__close">
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <form action="" class="modal__form">
+                    <input type="text" name="Имя" id="name" placeholder="Имя">
+                    <input type="email" name="Почта" id="email" placeholder="Email">
+                    <input type="tel" name="Телефон" id="tel" placeholder="Номер телефона">
+                    <input type="checkbox" name="Согласие" id="consent_modal">
+                    <label for="consent_modal">Согласие на обработку персональных данных</label>
+                    <div class="modal__button-wrapper">
+                        <button type="submit">Купить</button>
+                    </div>
+                </form>
+            </div>
+            <div class="modal__back"></div>
+            <div class="modal__overlay"></div>
+        </div>
     </div>
 
     <!-- <script src="js/main.js"></script> -->
