save test version

--- a/index.html
+++ b/index.html
@@ -440,16 +440,17 @@
                     </div>
                 </div>
             </div>
+            <svg class="svg-slider-left" fill="black">
+                <path fill="#fff"/>
+                <defs>
+                    <clipPath id="myPath-left">
+                        <path fill="#333"/>
+                    </clipPath>
+                </defs>
+            </svg>
         </div>
 
-        <svg class="svg-slider-left" fill="black">
-            <rect fill="#fff" />
-            <defs>
-                <clipPath id="myPath-left">
-                    <rect />
-                </clipPath>
-            </defs>
-        </svg>
+        
         <nav class="menu">
             <div class="menu__overlay"></div>
             <div class="menu__wrapper">
