--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
     <!-- <script src="js/main.js"></script> -->
     <script src="anime.min.js"></script>
     <script src="test.js"></script>
+    <script src="liquid.js"></script>
 </body>
 
 </html>
